package io.github.jongminchung.study.apicommunication.orders.api;

import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;

import java.math.BigDecimal;
import java.util.List;

import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;
import org.mockito.ArgumentMatchers;
import org.mockito.Mockito;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.boot.test.context.SpringBootTest;
import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
import org.springframework.http.HttpHeaders;
import org.springframework.http.MediaType;
import org.springframework.test.context.bean.override.mockito.MockitoBean;
import org.springframework.test.web.servlet.MockMvc;
import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;

import io.github.jongminchung.study.apicommunication.context.ApiHeaders;
import io.github.jongminchung.study.apicommunication.ratelimit.RateLimiter;

import tools.jackson.databind.ObjectMapper;

@SpringBootTest(properties = "test.context=OrderControllerTest")
@AutoConfigureMockMvc
class OrderControllerTest {

    @Autowired
    private MockMvc mockMvc;

    @Autowired
    private ObjectMapper objectMapper;

    @MockitoBean
    private RateLimiter rateLimiter;

    @BeforeEach
    void setUpRateLimiter() {
        Mockito.when(rateLimiter.tryAcquire(ArgumentMatchers.any(), ArgumentMatchers.any()))
                .thenReturn(true);
    }

    @Test
    void createOrderThroughRestApi() throws Exception {
        String payload = objectMapper.writeValueAsString(sampleRequest());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .content(payload)))
                .andExpect(status().isCreated())
                .andExpect(jsonPath("$.customerId").value("alpha"))
                .andExpect(jsonPath("$.tenantId").value("tenant-alpha"));
    }

    @Test
    void missingApiKeyReturnsUnauthorized() throws Exception {
        mockMvc.perform(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .content(objectMapper.writeValueAsString(sampleRequest())))
                .andExpect(status().isUnauthorized());
    }

    @Test
    void rateLimitIsEnforced() throws Exception {
        org.mockito.Mockito.when(rateLimiter.tryAcquire(ArgumentMatchers.any(), ArgumentMatchers.any()))
                .thenReturn(true, true, false);
        String payload = objectMapper.writeValueAsString(sampleRequest());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .content(payload)))
                .andExpect(status().isCreated());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .content(payload)))
                .andExpect(status().isCreated());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .content(payload)))
                .andExpect(status().isTooManyRequests());
    }

    @Test
    void createOrderRespondsWithKoreanContentLanguage() throws Exception {
        String payload = objectMapper.writeValueAsString(sampleRequest());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .header(HttpHeaders.ACCEPT_LANGUAGE, "ko")
                        .content(payload)))
                .andExpect(status().isCreated())
                .andExpect(header().string(HttpHeaders.CONTENT_LANGUAGE, "ko"));
    }

    @Test
    void createOrderRespondsWithEnglishContentLanguage() throws Exception {
        String payload = objectMapper.writeValueAsString(sampleRequest());

        mockMvc.perform(authorized(post("/api/v1/orders")
                        .contentType(MediaType.APPLICATION_JSON)
                        .header(HttpHeaders.ACCEPT_LANGUAGE, "en-US")
                        .content(payload)))
                .andExpect(status().isCreated())
                .andExpect(header().string(HttpHeaders.CONTENT_LANGUAGE, "en"));
    }

    private CreateOrderRequest sampleRequest() {
        CreateOrderRequest request = new CreateOrderRequest();
        request.setCustomerId("alpha");
        request.setProductCodes(List.of("api", "grpc"));
        request.setTotalAmount(new BigDecimal("42.50"));
        return request;
    }

    private MockHttpServletRequestBuilder authorized(MockHttpServletRequestBuilder builder) {
        return builder.header(ApiHeaders.API_KEY, "local-api-key")
                .header(ApiHeaders.TENANT_ID, "tenant-alpha")
                .header(ApiHeaders.CLIENT_ID, "web-client");
    }
}
